# sir-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO  benchmark.sh  run_tests.py  test.lang  test.sh  test_lang.sh
ace/: CMakeLists.txt  test.sh
ace/ace/: ace.h  ace_base.cpp  ace_base.hpp  ace_elf64.cpp  ace_ir.cpp  ace_ir.hpp  ace_obj.hpp  ace_type.cpp  ace_type.hpp
ace/ace/x86_64/: builder.cpp  enc_cases.h  encoder.c
ace/tests/: benchmark.cpp  main.cpp
benchmark/: generate_test.lua
experiments/: main.cpp
sir/: .gitignore  .ignore  CMakeLists.txt  sir.h  sir_base.hpp  sir_elf64.cpp  sir_interp.cpp  sir_interp.h  sir_ir.cpp  sir_ir.hpp  sir_obj.hpp  sir_vm.cpp  sir_vm.h  sir_x64.cpp  sir_x64_encoder.c  sir_x64_encoder.h
sir/sir/: sir.h  sir_base.cpp  sir_base.hpp  sir_elf64.cpp  sir_ir.cpp  sir_ir.hpp  sir_obj.cpp  sir_obj.hpp  sir_type.cpp  sir_type.hpp
sir/sir/x86_64/: builder.cpp  enc_mnems.h  encoder.h
sir/x86_64/: builder.cpp
src/: analysis.cpp  base.cpp  base.hpp  codegen.cpp  compiler.cpp  compiler.hpp  main.cpp  parser.cpp
tests/: arithmetic.lang  arithmetic_expected.txt  basic.lang  basic_expected.txt  conversions.lang  conversions_expected.txt  test.lang
